--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -34,22 +34,23 @@
 
                 <Button
                     android:id="@+id/admin_btnCompaniesMang"
-                    android:layout_width="250dp"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="136dp"
+                    android:layout_width="249dp"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="184dp"
                     android:backgroundTint="#A39305"
                     android:text="Manage Companies"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.496"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/admin_btnCustomersMang"
-                    android:layout_width="250dp"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="48dp"
+                    android:layout_width="247dp"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="172dp"
                     android:backgroundTint="#A39305"
                     android:text="Manage Customers"
                     android:textSize="20sp"
@@ -59,16 +60,6 @@
                     app:layout_constraintStart_toStartOf="@+id/admin_btnCompaniesMang"
                     app:layout_constraintTop_toBottomOf="@+id/admin_btnCompaniesMang" />
 
-                <ImageButton
-                    android:id="@+id/admin_btnBack"
-                    android:layout_width="67dp"
-                    android:layout_height="59dp"
-                    android:layout_marginStart="48dp"
-                    android:layout_marginBottom="56dp"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:srcCompat="@drawable/back" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </FrameLayout>
