--- a/app/src/main/res/layout/activity_manage_customers.xml
+++ b/app/src/main/res/layout/activity_manage_customers.xml
@@ -10,10 +10,10 @@
     tools:context=".MainActivity"
     tools:openDrawer="start">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/manageCustomers_toolbar"
@@ -21,16 +21,20 @@
             android:layout_height="wrap_content"
             android:background="#F3C84A"
             android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="11dp" />
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/linearLayout5"
+            android:layout_width="365dp"
             android:layout_height="66dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/manageCustomers_toolbar">
 
             <Button
                 android:id="@+id/manageCustomers_btnAdd"
@@ -74,9 +78,14 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/linearLayout6"
+            android:layout_width="365dp"
             android:layout_height="55dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout5"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
 
             <EditText
                 android:id="@+id/manageCustomers_etCustomerCode"
@@ -95,14 +104,15 @@
                 app:srcCompat="@android:drawable/ic_menu_search" />
         </LinearLayout>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="11dp" />
-
         <FrameLayout
             android:id="@+id/manageCustomers_fragContainer"
-            android:layout_width="match_parent"
-            android:layout_height="521dp">
+            android:layout_width="365dp"
+            android:layout_height="459dp"
+            android:layout_marginTop="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
             <ListView
                 android:id="@+id/manageCustomers_lv"
@@ -110,7 +120,8 @@
                 android:layout_height="match_parent" />
 
         </FrameLayout>
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
