--- a/app/src/main/res/layout/company_details_line.xml
+++ b/app/src/main/res/layout/company_details_line.xml
@@ -19,7 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="62dp"
-            android:background="#F4D8AE"
+            android:background="#E8EAD2"
             android:orientation="horizontal">
 
             <TextView
@@ -47,7 +47,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="62dp"
-            android:background="#F4D8AE"
+            android:background="#E8EAD2"
             android:orientation="horizontal">
 
             <TextView
