--- a/app/src/main/res/layout/customer_line.xml
+++ b/app/src/main/res/layout/customer_line.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:drawable/editbox_dropdown_light_frame"
-    android:backgroundTint="#F4D8AE">
+    android:backgroundTint="#E8EAD2">
 
     <LinearLayout
         android:id="@+id/customerLine_ll"
